--- a/index.html
+++ b/index.html
@@ -3,49 +3,59 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="hello.github.io/index.css">
+    <link rel="stylesheet" href="test2.css">
 </head>
 
 <body>
     <div class="container">
         <header>
             <img src="logo.png" usemap="#logo">
-            <map name="logo"><area shape="rect" coords="42,75,102,100" href="test2.html"></map>
-            <h2>css中不为人知的部分</h2>
-            <span>原文地址：</span> <a href="https://taobao.com">https://taobao.com</a>
+            <map name="logo"><area shape="rect" coords="42,75,102,100" href="https://www.w3school.com.cn/"></map>
+            <div class="title">
+                <h2>前端学习</h2>
+                <span>原文地址：</span> <a href="https://www.w3school.com.cn/">w3school</a>
+            </div>
         </header>
         <article>
-            <p>渡一科技教育公司成立于 2007 年，后经历几轮兼并收购，成立渡一信息技术开发有限公司，下设渡一教育品牌。公司核心业 务包含科技类外包，IT
-                教育培训等业务。企业开展教育业务至今已有7年整，市场辐射区域已达整个哈尔滨市，是国内首家开设专业web前端培训的机构。</p>
-            <h3>渡一科技教育公司</h3>
-            <p>成立于 2007 年，后经历几轮兼并收购，成立渡一信息技术开发有限公司，下设渡一教育品牌。公司核心业 务包含科技类外包，IT
-                教育培训等业务。企业开展教育业务至今已有7年整，市场辐射区域已达整个哈尔滨市，是国内首家开设专业web前端培训的机构。
-                渡一科技教育公司成立于 2007 年，后经历几轮兼并收购，成立渡一信息技术开发有限公司，下设渡一教育品牌。公司核心业 务包含科技类外包，IT
-                教育培训等业务。企业开展教育业务至今已有7年整，市场辐射区域已达整个哈尔滨市，是国内首家开设专业web前端培训的机构。
-            </p>
-            <h3>渡一<ul>
-                    <li>
-                        <img src="untitled.png">
-                        <img src="untitled1.png">
-                        <img src="untitled2.png">
-                        <img src="untitled.png">
-                    </li>
+            <p>认真学好前端，找份工作努力赚钱！认真学，多赚钱。认真学，多赚钱。认真学，多赚钱。认真学，多赚钱。认真学，多赚钱。认真学，多赚钱。认真学，多赚钱。</p>
+            <div class="section">
+                <h3>HTML</h3>
+                <p>HTML是页面，是骨架，搭建起网页的基本框架。现已发展到H5时代，新增了一些规则：
+                </p>
+                <ul class="list">
+                    <li>新特性应该基于 HTML、CSS、DOM 以及 JavaScript。</li>
+                    <li>减少对外部插件的需求（比如 Flash）</li>
+                    <li>更优秀的错误处理</li>
+                    <li>更多取代脚本的标记</li>
+                    <li>HTML5 应该独立于设备</li>
+                    <li>开发进程应对公众透明</li>
                 </ul>
-            </h3>
-            <p>科技教育公司成立于 2007 年，后经历几轮兼并收购，成立渡一信息技术开发有限公司，下设渡一教育品牌。公司核心业 务包含科技类外包，IT
-                教育培训等业务。企业开展教育业务至今已有7年整，市场辐射区域已达整个哈尔滨市，是国内首家开设专业web前端培训的机构。
-                渡一科技教育公司成立于 2007 年，后经历几轮兼并收购，成立渡一信息技术开发有限公司，下设渡一教育品牌。公司核心业 务包含科技类外包，IT
-                教育培训等业务。企业开展教育业务至今已有7年整，市场辐射区域已达整个哈尔滨市，是国内首家开设专业web前端培训的机构。
-            </p>
-            <h3>渡一科技</h3>
-            <p>教育公司成立于 2007 年，后经历几轮兼并收购，成立渡一信息技术开发有限公司，下设渡一教育品牌。公司核心业 务包含科技类外包，IT
-                教育培训等业务。企业开展教育业务至今已有7年整，市场辐射区域已达整个哈尔滨市，是国内首家开设专业web前端培训的机构。
-                渡一科技教育公司成立于 2007 年，后经历几轮兼并收购，成立渡一信息技术开发有限公司，下设渡一教育品牌。公司核心业 务包含科技类外包，IT
-                教育培训等业务。企业开展教育业务至今已有7年整，市场辐射区域已达整个哈尔滨市，是国内首家开设专业web前端培训的机构。
-            </p>
+            </div>
+            <div class="section">
+                <h3>CSS<ul class="pic">
+                        <li>
+                            <img src="web.jpg">
+                            <img src="web1.jpg">
+                            <img src="web2.jpg">
+                            <img src="web.jpg">
+                        </li>
+                    </ul>
+                </h3>
+                <p>即层叠样式表，样式表定义如何显示 HTML 元素，就像 HTML 3.2 的字体标签和颜色属性所起的作用那样。样式通常保存在外部的 .css 文件中。通过仅仅编辑一个简单的 CSS
+                    文档，外部样式表使你有能力同时改变站点中所有页面的布局和外观。由于允许同时控制多重页面的样式和布局，CSS 可以称得上 WEB 设计领域的一个突破。作为网站开发者，你能够为每个 HTML
+                    元素定义样式，并将之应用于你希望的任意多的页面中。如需进行全局的更新，只需简单地改变样式，然后网站中的所有元素均会自动地更新。
+                </p>
+            </div>
+            <div class="section">
+                <h3>JS</h3>
+                <p>JavaScript 是因特网上最流行的脚本语言，它存在于全世界所有 Web 浏览器中，能够增强用户与 Web 站点和 Web 应用程序之间的交互。JavaScript 和 Java
+                    是完全不同的语言，不论是概念还是设计。JavaScript 在 1995 年由 Brendan Eich 发明，并于 1997 年成为一部 ECMA 标准。 ECMA-262
+                    是其官方名称。ECMAScript 6 （发布于 2015 年）为现行标准。
+                </p>
+            </div>
         </article>
         <footer>
             <div>
