--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>前端学习</title>
-    <link rel="stylesheet" href="test2.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="font-awesome.min.css">
 </head>
 
